# mandelbrot-native

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  colormap.c  colormap.h  console.c  console.h  cubic_interpol.c  cubic_interpol.h  log.c  log.h  main.c  rendering.c  rendering.h  sdlif.c  sdlif.h
